--- a/app/globals.css
+++ b/app/globals.css
@@ -12,11 +12,11 @@
   --popover-foreground: oklch(0.205 0 0);
   --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.646 0.222 280);
+  --secondary: #1CF70D;
   --secondary-foreground: oklch(1 0 0);
   --muted: oklch(0.97 0.005 240);
   --muted-foreground: oklch(0.556 0.01 240);
-  --accent: oklch(0.646 0.222 280);
+  --accent: oklch(76.765% 0.23965 144.813);
   --accent-foreground: oklch(1 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --destructive-foreground: oklch(1 0 0);
